2000-09-18  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* menu.c (edit_direntry): show help when the help button is
	pressed, not the apply button

Sun Sep 10 16:33:15 2000  George Lebl <jirka@5z.com>

	* extern.c: minor cleanup in search of a bug.  Added some asserts.

Sat Sep 09 18:45:52 2000  George Lebl <jirka@5z.com>

	* button-widget.[ch], panel_config_global.h,
	  gnome-panel-properties.c, rgb-stuff.[ch], session.c:  Add a
	  configuration flag that specifies if we are to use fast (nearest)
	  or slow (hyperbolic) scaling for buttons.  hyperbolic is of
	  course the default as it just looks really cool.  Maybe we should
	  use bilinear though, not sure.

Sat Sep 09 17:47:18 2000  George Lebl <jirka@5z.com>

	* menu.[ch], menu-properties.c, session.c, panel.c:  Add a way to
	  set up custom icon for any menu button.

Sat Sep 09 15:54:20 2000  George Lebl <jirka@5z.com>

	* menu.c:  Remove an old standing "UglyHack(tm)" and fix copying
	  to favourites even with merged menus etc.  It now copies only
	  the neccessary files as well and preserves old order files.

	* menu-fentry.c: just cosmetic cleanups

Tue Sep 05 21:22:55 2000  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c: When copying a config, copy all
	  the text fields.  This fixes a crash with revert recently reported
	  on gnome-devel-list.

Tue Sep 05 18:26:56 2000  George Lebl <jirka@5z.com>

	* Makefile.am: only touch the my_gnome_panel_idl if everything
	  went fine, especially not if orbit-idl failed

Tue Sep 05 17:10:33 2000  George Lebl <jirka@5z.com>

	* scroll-menu.c: make sure we call the leave_notify handler
	  when we really leave.  It still seems to be missing the case
	  of leave event from scroll button directly onto the root, but
	  god didn't intend for that to work right in the first place and
	  it's not really needed.

Tue Sep 05 01:17:32 2000  George Lebl <jirka@5z.com>

	* scroll-menu.c: when keyboard traversing, make sure we "show" the
	  currently selected item.
