@@ -1,3 +1,9 @@
+Tue Sep 19 17:29:08 2000  George Lebl <jirka@5z.com>
+
+	* foobar-widget.[hc], menu.c, session.c: fix up
+	  allocation/destruction, fix leaks.  Make time format change
+	  immediately and elimintate a timeout race.
+
 2000-09-18  Jacob "Ulysses" Berkman  <jacob@helixcode.com>
 
 	* menu.c (edit_direntry): show help when the help button is
